--- a/about-me.ipynb
+++ b/about-me.ipynb
@@ -22,22 +22,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! My name is Julie. I’m excited to learn because Data Analytics / Data Science help me to understand the why behind numbers / informations.. A fun fact about me is: I enjoy running, even though I get out of breath easily. My goal with this course is to learn and eventually work in the environmental or NGO sector..\n"
+     ]
+    }
+   ],
    "source": [
     "# About Me\n",
     "# Please fill in the following details.\n",
     "\n",
-    "name = \"Your Name Here\"\n",
-    "reason = \"Why you are interested in AI, Data Analytics, or Data Science\"\n",
-    "fun_fact = \"One fun fact about yourself or a goal for this course\"\n",
+    "name = \"Julie\"\n",
+    "reason = \"Data Analytics / Data Science help me to understand the why behind numbers / informations.\"\n",
+    "fun_fact = \"I enjoy running, even though I get out of breath easily. My goal with this course is to learn and eventually work in the environmental or NGO sector.\"\n",
     "\n",
     "print(f\"Hi! My name is {name}. I’m excited to learn because {reason}. A fun fact about me is: {fun_fact}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,9 +66,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
